syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message TimeseriesMetadata {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue external_id = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.StringValue description = 4;
    bool is_string = 5;
    bool is_step = 6;
    google.protobuf.StringValue unit = 7;
    google.protobuf.Int64Value asset_id = 8;
    repeated int64 security_categories = 9;
    google.protobuf.Int64Value created_time = 10;
    google.protobuf.Int64Value last_updated_time = 11;
    map<string, string> metadata = 12;
    google.protobuf.Int64Value data_set_id = 13;
}
